[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Party.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 10.5 )

[node name="Party" type="KinematicBody2D"]
position = Vector2( 2, 9 )
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 0 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 16 )

[node name="Body" parent="Player2" index="0"]
color = Color( 0.411765, 0.760784, 0.168627, 1 )

[node name="Player3" parent="." instance=ExtResource( 1 )]
position = Vector2( -16, 32 )

[node name="Body" parent="Player3" index="0"]
margin_left = 9.0
margin_top = -24.0
margin_right = 25.0
margin_bottom = -8.0
color = Color( 0.886275, 0.854902, 0.0901961, 1 )

[node name="Gun" parent="Player3" index="1"]
margin_left = 17.0
margin_top = -18.0
margin_right = 27.0
margin_bottom = -14.0

[node name="CollisionShape2D" parent="Player3" index="2"]
position = Vector2( 16, 0 )

[node name="Player4" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 16 )

[node name="Body" parent="Player4" index="0"]
margin_top = -24.0
margin_bottom = -8.0
color = Color( 0.168627, 0.247059, 0.760784, 1 )

[node name="Gun" parent="Player4" index="1"]
margin_top = -18.0
margin_bottom = -14.0

[node name="CollisionShape2D" parent="Player4" index="2"]
position = Vector2( 1, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9, 13.5 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[editable path="Player2"]
[editable path="Player3"]
[editable path="Player4"]
